# sw-fenice-evo-steering-wheel

./: .clang-format  .cproject.bak  .gitignore  .gitignore~  .gitmodules  .mxproject  .project  .stm32env  Makefile  README.md  STM32-for-VSCode.config.yaml  STM32H723ZGTX_RAM.ld  STM32H723ZGTx_FLASH_shifted.ld  STM32Make.make  fenice-evo-steering-wheel.ioc  fmt  lv_conf.h  memory.json  platformio.ini  update_steering.sh
Core/Inc/: CrashCatcher.h  can_over_serial.h  custom_memory_pool.h  dac.h  display_buf.h  dma2d.h  dts.h  fdcan.h  fmac.h  fmc.h  gpio.h  i2c.h  led_control.h  ltdc.h  main.h  memdriver.h  messages.h  octospi.h  olive.c  ptt.h  screen_driver.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h  usart.h  watchdog.h
Core/Simulator/: Makefile  can.c  queue.c  vc.c
Core/Src/: CrashCatcher.c  can_over_serial.c  custom_memory_pool.c  dac.c  display_buf.c  dma2d.c  dts.c  fdcan.c  fmac.c  fmc.c  freertos.c  gpio.c  i2c.c  led_control.c  ltdc.c  ptt.c  (+13 more)
Core/UI/: .gitignore  CMakeLists.txt  README.md  can.sh  lv_demo_conf.h  run.sh  script.sh  simulate.sh  vcanSetup.sh
Core/UI/Inc/: can_messages.h  controls.h  dma2d_utils.h  graphic_callbacks.h  graphics_manager.h  olive.c  raster_config.h  steering.h  steering_config.h  steering_defs.h  steering_types.h  steering_wheel_font_30.h  steering_wheel_font_50.h  watchdog.h
Core/UI/Lib/McuFont/decoder/: mf_justify.h  mf_scaledfont.c  mf_scaledfont.h
Core/UI/Lib/McuFont/fonts/: KonexyFont32.c  KonexyFont72.c  Makefile  fonts.h
Core/UI/Lib/McuFont/fontscopy/: Airnt32.c  fonts.h
Core/UI/Src/: can_messages.c  controls.c  dma2d_utils.c  graphic_callbacks.c  graphics_manager.c  maxheap.c  steering.c  watchdog.c
Core/UI/fonts/: lv_font_inter_bold_14.c  lv_font_inter_bold_20.c  lv_font_inter_bold_22.c  lv_font_inter_bold_30.c  lv_font_inter_bold_90.c
Core/UI/olivec/inc/: olive.c  steering_wheel_font_70.h
Core/UI/simulator/: can.c  can.h  can_data.c  can_data.h  main.c  mouse_cursor_icon.c  queue.c  queue.h
Core/UI/steering/: can_messages.c  can_messages.h  cansniffer.c  cansniffer.h  controls.c  controls.h  controls_lvgl.c  controls_lvgl.h  controls_olivec.c  controls_olivec.h  graphics_manager.c  graphics_manager.h  maxheap.c  maxheap.h  messages.h  ptt.c  ptt.h  racing_tab_help_image.c  racing_tab_help_image.h  shutdown.c  shutdown.h  steering.c  steering.h  steering_config.h  steering_lvgl.c  steering_lvgl.h  steering_olivec.c  steering_olivec.h  tab_calibration.c  tab_calibration.h  tab_debug.c  tab_debug.h  tab_engineer_mode.c  tab_engineer_mode.h  tab_manager.c  tab_manager.h  tab_racing.c  tab_racing.h  tab_sensors.c  tab_sensors.h  (+6 more)
Core/UI/steering/endurance_mode/: endurance.c  endurance.h
Core/UI/steering/engineer_mode/: cansniffer.c  cansniffer.h  tab_balancing_status.c  tab_balancing_status.h  tab_cansniffer.c  tab_cansniffer.h  tab_cooling.c  tab_cooling.h  tab_debug.c  tab_debug.h  tab_engineer_mode.c  tab_engineer_mode.h  tab_fatal_error.c  tab_fatal_error.h  tab_inverters_cansniffer.c  tab_inverters_cansniffer.h  tab_primary_cansniffer.c  tab_primary_cansniffer.h  tab_secondary_cansniffer.c  tab_secondary_cansniffer.h  tab_shutdown_circuit.c  tab_shutdown_circuit.h  tab_terminal.c  tab_terminal.h  terminal.h
Core/UI/steering/fonts/: lv_font_inter_bold_14.c  lv_font_inter_bold_18.c  lv_font_inter_bold_20.c  lv_font_inter_bold_200.c  lv_font_inter_bold_22.c  lv_font_inter_bold_30.c  lv_font_inter_bold_38.c  lv_font_inter_bold_60.c  lv_font_inter_bold_70.c  lv_font_inter_bold_90.c
Core/UI/steering/racing_tabs/: endurance.c  endurance.h  precharge_bar_popup.c  precharge_bar_popup.h  tab_calibration.c  tab_calibration.h  tab_debug.c  tab_debug.h  tab_hv.c  tab_hv.h  tab_lv.c  tab_lv.h  tab_notification.c  tab_notification.h  tab_racing.c  tab_racing.h  tab_sensors.c  tab_sensors.h  tab_track_test.c  tab_track_test.h
Core/UI/tests/: Makefile  max_heap_tests.c
flashing-can/: bin2srec  prepare_srec.sh
open-blt-fenice-steering-wheel/: .gitignore  .mxproject  Makefile  STM32-for-VSCode.config.yaml  STM32H723ZGTx_FLASH.ld  STM32Make.make  open-blt-fenice-steering-wheel.ioc  platformio.ini  startup_stm32h723xx.s
tools/: fonts.json  generate_fonts.py
(+106 files in other folders)
